tests/rosetta/out/Smalltalk/checkpoint-synchronization-4.out
/tmp/checkpoint-synchronization-4.st:6: parse error, expected ']'
