tests/rosetta/out/Smalltalk/checkpoint-synchronization-4.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| nMech detailsPerMech mech id d |
nMech := 5.
detailsPerMech := 4.
1 to: (nMech + 1) do: [:mech |.
id := mech.
Transcript show: ((((((((('worker ') + ((id asString)))) + (' contracted to assemble '))) + ((detailsPerMech asString)))) + (' details'))) printString; cr.
Transcript show: ((((('worker ') + ((id asString)))) + (' enters shop'))) printString; cr.
d := 0.
[(d < detailsPerMech)] whileTrue: [.
Transcript show: ((((('worker ') + ((id asString)))) + (' assembling'))) printString; cr.
Transcript show: ((((('worker ') + ((id asString)))) + (' completed detail'))) printString; cr.
d := (d + 1).
].
.
Transcript show: ((((('worker ') + ((id asString)))) + (' leaves shop'))) printString; cr.
Transcript show: ((((('mechanism ') + ((mech asString)))) + (' completed'))) printString; cr.
].
.
